add stir_list_registries utility

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -2872,6 +2872,9 @@ and the STIR version. Run without arguments to get usage information.
 (Equivalent functions in C++/Python are \texttt{get\_STIR\_config\_dir},
 \texttt{get\_STIR\_doc\_dir} and \texttt{get\_STIR\_examples\_dir}).
 
+\textbf{stir\_list\_registries} is a utility that list possible values of various
+registries, which can be useful to know what to use in a <tt>.par<tt> file.
+
 \subsubsection{
 Displaying and performing operations on data}
 
