--- a/documentation/STIR-developers-overview.tex
+++ b/documentation/STIR-developers-overview.tex
@@ -391,14 +391,24 @@ such that a production version of the programs
 is not slowed down. If an assertion is false, the program aborts 
 with info on the file and line number where the assertion failed.
 
-\subsection{\label{ssect:AdvancedCppFeatures}
-Advanced (?) C++ features used}
-
-STIR uses C++-11 an dis compatible with C++-20 to the best of our knowledge.
+\subsection{C++ conventions}
+STIR uses C++-14 and is compatible with C++-20 to the best of our knowledge.
 For legacy reasons, we have some preprocessor 
 macros (see \textit{stir/common.h}) that were used isolate work-arounds for older 
 compilers. Ideally, all these \#ifdefs should disappear at a 
 later development stage of the library.
+
+We use \texttt{override} for virtual functions in derived classes. This is clearer,
+less error-prone and avoids compiler warnings.
+
+STIR has a very long history. Lots of code was written pre-C++-11. We gradually simplify
+code when editing. This is definitely visible for code using iterators, which could be
+simplified by using \texttt{auto} as in this guide. It is a long term project to
+remove all compiler warnings from the code. Please help.
+
+\subsection{\label{ssect:AdvancedCppFeatures}
+Advanced (?) C++ features used}
+
 
 This section describes some C++ features used in STIR that might not be so familiar to
 non-C++ programmers.
@@ -1024,7 +1034,7 @@ following example.
 
     int number; float a;
 
-    void initialise_keymap()
+    void initialise_keymap() override
     {
       base_type::initialise_keymap();
       this->parser.add_start_key("My Class Parameters");
@@ -1033,14 +1043,14 @@ following example.
       this->parser.add_stop_key("END My Class Parameters");
     }
 
-    void set_defaults()
+    void set_defaults() override
     {
       base_type::set_defaults();
       // specify defaults for the parameters in case they are not set.
       number = 1;
       a = 2.4F;
     }
-    bool post_processing() // will be renamed to post_parsing()
+    bool post_processing() override // will be renamed to post_parsing()
     {
       // do some checks and handle some extra variables
       return false; // everything was ok
@@ -1122,11 +1132,9 @@ We currently have no easy way to copy all data across from one \texttt{ProjData}
 object to another. You will have to write an explicit loop over segments.
 
 \subsection{Dynamic or gated data}
-STIR 2.0 does not provide any direct facilities for reading 4D data (aside from
-the ECAT conversion utilities). Basic support should come in version 2.1.
-In the mean time, there is some preliminary functionality via the 
-\texttt{TimeFrameDefinitions} class and the \texttt{get\_time\_frame\_info}
-utility.
+Data should have an \texttt{ExamInfo} with a \texttt{TimeFrameDefinitions} object.
+You can also use the \texttt{get\_time\_frame\_info} utility.
+There is no equivalenet yet for gating fractions.
 
 
 \section{
