add doc on clang-format process

--- a/documentation/STIR-developers-overview.tex
+++ b/documentation/STIR-developers-overview.tex
@@ -1331,7 +1331,10 @@ as above, everything should work as expected.
 
 \section{Contributing to STIR}
 See
-\R2Lurl{https://github.com/UCL/STIR/blob/master/CONTRIBUTING.md}{STIR/CONTRIBUTING.md}.
+\R2Lurl{https://github.com/UCL/STIR/blob/master/CONTRIBUTING.md}{STIR/CONTRIBUTING.md}
+and
+\R2Lurl{https://github.com/UCL/STIR/blob/master/documentation/devel/README.md}{documentation/devel/README.md}
+for more information on editor settings etc.
 
 \subsection{Continuous integration testing}
 We use GitHub Actions and Appveyor for testing of every pull-request that was submitted on GitHub. PRs
