fix  Datasymmetry timeshift; change IO timing pos; add check in ProjDatafromStream; add glossary for TOF number

--- a/documentation/STIR-glossary.tex
+++ b/documentation/STIR-glossary.tex
@@ -135,6 +135,9 @@ ring differences} above this line.
 Set of \textbf{merged} \textbf{sinograms} with a common average \textbf{ring 
 difference} as shown in Annex 1.
 
+\item[TOF number] 
+The line of response is divided $N_t$ TOF positions the numbering goes from 0 to $N_t -1$
+
 \item[Viewgram] 
 Set of equal azimuth \textbf{merged} \textbf{LORs} of a \textbf{segment}.
 
