update to 6.1 and minor doc improvements

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -44,7 +44,7 @@
 \\[3cm]
 
 \textbf{{\huge User's Guide\\
- Version 6.0}}
+ Version 6.1}}
 \end{center}
 
 \end{spacing}
@@ -444,7 +444,8 @@ display, you could try 8bit mode anyway.
 
 { \subsubsubsection{Cygwin on Windows}
 }
-\textit{Cygwin support has not been tested since about 2018 but likely still works. Instructions below might be out-of-date though.}
+\textit{Cygwin support has not been tested since about 2018 but likely still works. Instructions below are likely out-of-date though.
+We highly recommend to use WSL instead.}
 
 If you are using Windows but would like 
 to have nearly everything that Linux/Unix has to offer, Cygwin could help. Check out http://cygwin.com.
